2009-11-27 Guillem Solà  <garanda@flumotion.com>

        reviewed by: xqueralt

        * flumotion/component/producers/audiotest/admin_gtk.py:
        * flumotion/component/producers/audiotest/audiotest.py:
        * flumotion/component/producers/audiotest/audiotest.xml:
        * flumotion/component/producers/audiotest/wizard.glade:
        * flumotion/component/producers/audiotest/wizard_gtk.py:
        * flumotion/component/producers/videotest/admin_gtk.py:
        * flumotion/component/producers/videotest/wizard_gtk.py:
        * po/ca.po:
        * po/es.po:
        add wave property to audiotest.
        add choose wave in audiotest wizard.
        add blink pattern in videotest wizard.
        Fixes #1387.
 
2009-11-27  Sébastien Merle  <sebastien@flumotion.com>

	* flumotion/component/misc/httpserver/httpserver.xml:
	* flumotion/component/misc/httpserver/httpcached/strategy_fifo.py
	  (deleted):
	  Removed unused file, and fixed the bundle declaration.

2009-11-27  Sébastien Merle  <sebastien@flumotion.com>

	* flumotion/component/misc/httpserver/httpcached/strategy_base.py:
	* flumotion/test/test_component_httpserver_httpcached_stats.py:
	Put back the buffering for caching sessions, but still pausing.
	Fixed a cleanup bug that made tests fail sometimes.

2009-11-27  Guillem Solà  <garanda@flumotion.com>

	reviewed by: xqueralt

	* flumotion/component/producers/audiotest/wizard.glade:
	* flumotion/component/producers/videotest/wizard.glade:
	fix missing mnemonic wizard keys #1387

2009-11-26  Sébastien Merle  <sebastien@flumotion.com>

	* flumotion/component/misc/httpserver/httpcached/strategy_base.py:
	* flumotion/test/test_component_httpserver_httpcached_strategy.py:
	Do not bufferize data for copy sessions before having a temporary file,
	this could lead to big peaks of memory usage.

2009-11-26  Xavier Queralt  <xqueralt@flumotion.com>

	* configure.ac:
	* flumotion.spec.in:
	Update requirements of pygtk, pygst and gst and use them in the spec
