@@ -1,3 +1,8 @@
+2009-11-27  Sébastien Merle  <sebastien@flumotion.com>
+
+	* flumotion/component/misc/httpserver/httpcached/strategy_base.py:
+	Fixed a bug when a connection is resumed while buffering.
+
 2009-11-27 Guillem Solà  <garanda@flumotion.com>
 
         reviewed by: xqueralt
